--- a/스크립트 과제_01.ipynb
+++ b/스크립트 과제_01.ipynb
@@ -2,6 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "915bba0f",
+   "metadata": {},
+   "source": [
+    "# 2018136015_김성원_스크립트과제_01"
+   ]
+  },
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "915bba0f",
+   "metadata": {},
+   "source": [
+    "# 2018136015_김성원_스크립트과제_01"
+   ]
+  },
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
    "id": "387ee3c9",
    "metadata": {},
    "source": [
